# bg-arena

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_contenders.py  tests_demo.py  validate_gnubg.py  validate_sage.py
.github/workflows/: ci.yml
bgarena/: README.md  __init__.py  board.py  engines.py  game.py  moves.py  tournament.py
docs/: gnubg-protocol.md
scripts/: gnubg_probe.py
